@@ -768,11 +768,17 @@ MANACOST=50, Skill_Recall 25
 
 # MANACOMPOUND is an optional system to increase the amount of 
 # mana/move/whatever used whenever a skill is used again within
-# a particular number of ticks.  This system is meant to encourage
-# more variety in skill rotations.  
-# The format of the entry is the number of ticks followed by a 
-# space and a percentage of cost to increase, and/or an 
-# absolute amount of the cost to increase.
+# a particular number of ticks, or negate its use entirely.  
+# This system is meant to encourage more variety in skill rotations.
+# The format is a comma-delimited list of entries, where each 
+# entry is the number of ticks followed by a space and a 
+# percentage of cost to increase, absolute amount of the cost to increase,
+# or -1 to negate the use entirely.  Each entry can also optionally
+# end with the word MOBMASK= followed by a zapper mask to whom the rule
+# applies, and/or ABILITYMASK= followed by a zapper mask to designate
+# which rules apply to which skills.  Entries without masks apply to
+# everyone and all unmatched abilities.
+# Example: MANACOMPOUND=5 5%, 0 0 ABILITYMASK=-JAVACLASS +Alchemy
 # Example: MANACOMPOUND=3 25%
 MANACOMPOUND=
 
