@@ -1900,6 +1900,7 @@ Valid embedded codes for custom prompts include:\n\r\
 %B :  Go to a new line                 %z :  Display current area name\n\r\
 %r :  Display name of the room         %R :  Display room number (ADMIN ONLY)\n\r\
 %y :  Display common skill % progress  %Y :  Display common skill time remain\n\r\
+%u :  List skills on cooldown          \n\r\
 \n\r\
 MISC:\n\r\
 %fFACTION NAME : Display faction value as percent %\n\r\
