@@ -19,6 +19,8 @@
  18. New common skills: Master Dyeing, and Master Lacquering
  19. Players >= last player level no longer gain experience.
  20. New disease: Color Blindness.  All Canine-related races now have it.
+ 21. MANACOMPOUND system expanded to support multiple rules, masks, and ability cooldowns
+ 22. New PROMPT variable to list your skills on cooldown/mana compounding.
 
 # Build 5.9.8 Release 4/8/2019
   1. New skills: Informant, AutoSwipe, Find Clan Home, Find Clan Ship, Letter of Marque
